tests/warn/tag-value.jo.check
---------- Error at ./tests/warn/tag-value.jo:12:19 ---------------
| type ErrorUnion = Int | Tiger // error
|                   ^^^
|                   Only tag type or union type allowed inside a union type, found = Int

---------- Error at ./tests/warn/tag-value.jo:13:20 ---------------
| type ErrorUnion2 = #abType | #abEFType // error
|                    ^^^^^^^^^^^^^^^^^^^
|                    Conflict between tag abEFType and abType in union type. The first 2 and last 2 chars should not be all the same.

---------- Error at ./tests/warn/tag-value.jo:14:6 ---------------
| type ErrorUnion3 = ErrorUnion3 | #Foo // error // error
|      ^^^^^^^^^^^
|      Illegal recursive definition: ErrorUnion3

---------- Error at ./tests/warn/tag-value.jo:14:20 ---------------
| type ErrorUnion3 = ErrorUnion3 | #Foo // error // error
|                    ^^^^^^^^^^^
|                    Only tag type or union type allowed inside a union type, found = ErrorUnion3

---------- Error at ./tests/warn/tag-value.jo:15:6 ---------------
| type A = ErrorUnion4
|      ^
|      Illegal recursive definition: A, ErrorUnion4

---------- Error at ./tests/warn/tag-value.jo:16:20 ---------------
| type ErrorUnion4 = A | #Foo // error // error
|                    ^
|                    Only tag type or union type allowed inside a union type, found = A

---------- Error at ./tests/warn/tag-value.jo:22:13 ---------------
|     case s: Sanglier => "Sanglier: " + s.origin // error
|             ^^^^^^^^
|             The tag type #Sanglier(origin: String) is not a branch of the scrutinee type Sheep | Cow. 

---------- Warning at ./tests/warn/tag-value.jo:26:9 ---------------
|   match c                                      // error
|         ^
|         The match will fail for the case: Wolf

---------- Warning at ./tests/warn/tag-value.jo:38:10 ---------------
|     case h: Herbivore => showHerbivore h   // error
|          ^^^^^^^^^^^^
|          The case is not reachable

7 error(s), 2 warning(s)
